# cpp_box

./: .cirrus.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.txt  lgtm.yml  stack in stl
.circleci/: config.yml
examples/: .clang-format  game_of_life.cpp  rotating_colors.cpp
include/arm_thing/: arm.hpp  elf_reader.hpp  state_machine.hpp  utility.hpp
include/cpp_box/: arm.hpp  compiler.hpp  elf_reader.hpp  hardware.hpp  logically_const.hpp  memory_map.hpp  print_utilities.hpp  state_machine.hpp  test-backup.hpp  test.cpp  utility.hpp
lib/: compiler.cpp  utility.cpp
perf_tests/: perf_test_1.cpp
src/: arm_emu.cpp  cpp_box.cpp  elf_reader.cpp  imgui_client.cpp  main.cpp  obj_compiler.cpp  utility.cpp
test/: constexpr_tests.cpp  elf_reader_fuzzer.cpp
utils/: linker_script.md  make_arm_module.sh
